making some initial changes

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,20 @@
 /.vs/ProjectEvaluation/radipublog.projects.v2
 /.vs/ProjectEvaluation/radipublog.projects.v5
 /.vs/ProjectEvaluation/radipublog.projects.v5.1
+/.vs/radipuBlog/FileContentIndex/merges/18c43864-92b6-4c82-b357-dac5f1c13113.vsidx
+/.vs/radipuBlog/FileContentIndex/merges/5660fe2d-42eb-4313-bae0-0f45acda734e.vsidx
+/.vs/radipuBlog/FileContentIndex/merges/56b405c8-abd5-4283-a94d-a40516915257.vsidx
+/.vs/radipuBlog/FileContentIndex/merges/6467f9f3-f603-416b-8ea4-fa4faced752f.vsidx
+/.vs/radipuBlog/FileContentIndex/merges/65eb25aa-f0f8-4728-acbe-484da319790a.vsidx
+/.vs/radipuBlog/FileContentIndex/merges/71690fb4-d8f3-4822-99f5-09c88d890bcb.vsidx
+/.vs/radipuBlog/FileContentIndex/merges/8720387f-60a0-4bde-8a48-d24edac8b39f.vsidx
+/.vs/radipuBlog/FileContentIndex/merges/96ee7bd5-8fec-458b-a701-03d6be7ab700.vsidx
+/.vs/radipuBlog/FileContentIndex/merges/9db4afec-e988-4149-9f0d-f90a8b9822fa.vsidx
+/.vs/radipuBlog/FileContentIndex/merges/a9129160-2275-4aa5-bbaa-4abdaded733a.vsidx
+/.vs/radipuBlog/FileContentIndex/merges/b8f779bf-74db-4029-bc75-9bfc038e6fdb.vsidx
+/.vs/radipuBlog/FileContentIndex/merges/d5ec5fff-42f8-49f6-b72f-e611f3d00d52.vsidx
+/.vs/radipuBlog/FileContentIndex/merges/c14299d7-3f31-4cd3-96f9-01e9bcdaeb71.vsidx
+/.vs/radipuBlog/FileContentIndex/merges/db5912cd-66b3-4271-b906-35403606fe95.vsidx
+/.vs/radipuBlog/FileContentIndex/2a3efc89-d071-4d7b-96c0-99cb7dbfe7ac.vsidx
+/.vs/radipuBlog/FileContentIndex/merges/de04a795-d04f-487b-99ee-c4a85c151432.vsidx
+/.vs/radipuBlog/FileContentIndex/merges/fc14406e-3018-4acf-a59b-305b67fc67c7.vsidx
