--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 /.vs/radipuBlog/FileContentIndex/2a3efc89-d071-4d7b-96c0-99cb7dbfe7ac.vsidx
 /.vs/radipuBlog/FileContentIndex/merges/de04a795-d04f-487b-99ee-c4a85c151432.vsidx
 /.vs/radipuBlog/FileContentIndex/merges/fc14406e-3018-4acf-a59b-305b67fc67c7.vsidx
+/.vs/radipuBlog/FileContentIndex
