updated book review populating

--- a/My Blog Website/My Blog Website.csproj
+++ b/My Blog Website/My Blog Website.csproj
@@ -11,6 +11,7 @@
     <None Remove="Areas\Admin\Views\Posts\t2dgsdat.kfe~" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Views\Search\" />
     <Folder Include="wwwroot\admin\" />
   </ItemGroup>
   <ItemGroup>
