--- a/My Blog Website/My Blog Website.csproj
+++ b/My Blog Website/My Blog Website.csproj
@@ -20,6 +20,7 @@
     <Folder Include="wwwroot\admin\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="MailKit" Version="4.11.0" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.2" />
